Fixed bugs based on generics in class and extensions generation

--- a/src/TypeProofSql/TypeProofSql.csproj
+++ b/src/TypeProofSql/TypeProofSql.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\SQLite\" />
+    <Folder Include="Statements\SQLite\" />
   </ItemGroup>
 
 </Project>
