Clean up classes

--- a/src/TypeProofSql.SourceGenerator/TypeProofSql.SourceGenerator.csproj
+++ b/src/TypeProofSql.SourceGenerator/TypeProofSql.SourceGenerator.csproj
@@ -12,10 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="mermaid.txt">
+    <None Update="SQLite\extensionDefinition">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="sqlite_definition">
+    <None Update="SQLite\classDefinition">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
