Complete rename to Asmerald

--- a/src/Asmerald.Generate/Properties/launchSettings.json
+++ b/src/Asmerald.Generate/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "TypeProofSql.Generate": {
+    "Asmerald.Generate": {
       "commandName": "Project",
       "commandLineArgs": "generate SQLite \"Data Source=C:\\Users\\Alexander\\Desktop\\Digillection\\digillection.sqlite3;\" \"C:\\temp\\sqlgen\" --nspace=test.testna"
     }
