--- a/src/Asmerald.Generate/Asmerald.Generate.csproj
+++ b/src/Asmerald.Generate/Asmerald.Generate.csproj
@@ -16,7 +16,11 @@
     <PackageReference Include="ConsoleTables" Version="2.4.2" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
+    <PackageReference Include="Npgsql" Version="7.0.1" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.80" />
     <PackageReference Include="System.CodeDom" Version="7.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="TinyCsvParser" Version="2.7.0" />
   </ItemGroup>
 
@@ -25,13 +29,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Generators\mssql_type_mapping.csv">
+    <None Update="Generators\Mapping\mariadb_type_mapping.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Generators\postgresql_type_mapping.csv">
+    <None Update="Generators\Mapping\mysql_type_mapping.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Generators\oracle_type_mapping.csv">
+    <None Update="Generators\Mapping\mssql_type_mapping.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Generators\Mapping\postgresql_type_mapping.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Generators\Mapping\oracle_type_mapping.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
