Updated MSSQL queries to generate code

--- a/src/Asmerald.Test/Asmerald.Test.csproj
+++ b/src/Asmerald.Test/Asmerald.Test.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Asmerald\Asmerald.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MSSQL\Generated\" />
+  </ItemGroup>
+
 </Project>
