--- a/src/Asmerald.Generate/Properties/launchSettings.json
+++ b/src/Asmerald.Generate/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Asmerald.Generate": {
       "commandName": "Project",
-      "commandLineArgs": "scheme MSSQL \"Server=localhost;Database=master;User Id=sa;Password=yourStrong(!)Password;\""
+      "commandLineArgs": "generate MSSQL \"Server=localhost;Database=master;User Id=sa;Password=yourStrong(!)Password;\" \"C:\\Users\\Alexander\\Source\\Repos\\Asmerald\\src\\Asmerald.Test\\MSSQL\\Generated\""
     }
   }
 }
